<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:hoistutil="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        layout="@layout/titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <android.support.v4.view.ViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/home_button"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <cn.edu.nuc.csce.dcldims.view.BottomTab
            android:id="@+id/home_tab_setting"
            style="@style/bottom_tab"
            hoistutil:icon="@drawable/ic_home_setting"
            hoistutil:text="@string/home_setting"
            hoistutil:color="#ff45c01a"
            />
        <cn.edu.nuc.csce.dcldims.view.BottomTab
            android:id="@+id/home_tab_monitor"
            hoistutil:icon="@drawable/ic_home_monitor"
            hoistutil:text="@string/home_monitor"
            hoistutil:color="#ff45c01a"
            style="@style/bottom_tab" />
        <cn.edu.nuc.csce.dcldims.view.BottomTab
            android:id="@+id/home_tab_help"
            style="@style/bottom_tab"
            hoistutil:icon="@drawable/ic_home_help"
            hoistutil:text="@string/home_help"
            hoistutil:color="#ff45c01a"/>
    </LinearLayout>
</LinearLayout>
